--- a/project1.html
+++ b/project1.html
@@ -5,7 +5,7 @@
 
 <header>
     <!-- Sets an icon for the page -->
-    <link rel="icon" type="image/x-icon" href="/resources/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
 </header>
 
 <body onload="main()">
@@ -19,9 +19,31 @@
     <script src="project1.js"></script>
 
     <!-- Setup the Canvas -->
-    <canvas id="canvas" width="800" height="800">
+    <canvas id="canvas" width="1280" height="720">
         Please use a browser that supports "canvas"
-    </canvas>    
+    </canvas>
+
+    <!-- Add camera controls -->
+    <div>
+        <input type="range" id="sliderX" min="-5" max="5" step=".01" />
+        <label id="cameraX" for="sliderX"></label>
+    </div>
+    <div>
+        <input type="range" id="sliderY" min="-5" max="5" step=".01" />
+        <label id="cameraY" for="sliderY"></label>
+    </div>
+    <div>
+        <input type="range" id="sliderZ" min="-5" max="5" step=".01" />
+        <label id="cameraZ" for="sliderZ"></label>
+    </div>
+    <div>
+        <input type="button" onclick="togglePerspective()" value="Toggle Perspective">
+    </div>
+
+    <p>
+        <input type="button" onclick="launchPlane()" value="Launch Plane">
+        <input type="button" onclick="resetPlane()" value="Reset Plane">
+    </p>
 
 </body>
 
