--- a/project1.html
+++ b/project1.html
@@ -25,17 +25,18 @@
 
     <!-- Add camera controls -->
     <div>
-        <input type="range" id="sliderX" min="-5" max="5" step=".01" />
+        Use A/D to Control 
         <label id="cameraX" for="sliderX"></label>
     </div>
     <div>
-        <input type="range" id="sliderY" min="-5" max="5" step=".01" />
+        Use S/W to Control
         <label id="cameraY" for="sliderY"></label>
     </div>
     <div>
-        <input type="range" id="sliderZ" min="-5" max="5" step=".01" />
+        Use Q/E to Control
         <label id="cameraZ" for="sliderZ"></label>
     </div>
+
     <div>
         <input type="button" onclick="togglePerspective()" value="Toggle Perspective">
     </div>
