--- a/project1.html
+++ b/project1.html
@@ -4,8 +4,7 @@
 <html lang="en">
 
 <header>
-    <!-- Sets an icon for the page -->
-    <link rel="icon" type="image/x-icon" href="resources/favicon.ico">
+    <title>Submarine Skirmish</title>
 </header>
 
 <body onload="main()">
