--- a/project1.html
+++ b/project1.html
@@ -38,13 +38,13 @@
 
     <div>
         <input type="button" onclick="togglePerspective()" value="Toggle Perspective">
-        <input id="target" style="visibility:hidden" type="button" onclick="switchTarget()" value="Switch Target">
+        <input id="target" type="button" disabled onclick="switchTarget()" value="Switch Target">
     </div>
 
     <p>
-        <input type="button" onclick="launchPlane()" value="Launch Plane">
-        <input id="torpedo" style="visibility:hidden" type="button" onclick="fireTorp()" value="Fire Torpedo">
-        <input type="button" onclick="reset()" value="Reset">
+        <input id="plane" type="button" onclick="launchPlane()" value="Launch Plane">
+        <input id="torpedo" type="button" disabled onclick="fireTorp()" value="Fire Torpedo">
+        <input id="reset" type="button" disabled onclick="reset()" value="Reset">
     </p>
 
 </body>
