--- a/project2.html
+++ b/project2.html
@@ -1,5 +1,3 @@
-<!-- Last edited by Dietrich Geisler 2025 -->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -24,11 +22,18 @@
     </canvas>
 
     <p>
-        <input id="plane" type="button" onclick="launchPlane()" value="Launch Plane">
-        <input id="torpedo" type="button" disabled onclick="fireTorp()" value="Fire Torpedo">
-        <input id="reset" type="button" disabled onclick="reset()" value="Reset">
+        <button id="plane" onclick="launchPlane()">Launch Plane</button>
+        <button id="torpedo" disabled onclick="fireTorp()">Fire Torpedo</button>
+        <button id="reset" disabled onclick="reset()">Reset</button>
     </p>
-
+    <p>
+        <button id="detach" onclick="toggleDetach()">Toggle Free Camera</button>
+    </p>
+    <p>
+        Island Size: 
+        <input type="range" id="size" min="3" max="10" step="0.1" value="5">
+        <button id="regen" onclick="regenerate()">Regenerate Island</button>
+    </p>
 </body>
 
 </html>
