Instructions and Fix Camera

--- a/project2.html
+++ b/project2.html
@@ -28,6 +28,7 @@
     </p>
     <p>
         <button id="detach" onclick="toggleDetach()">Toggle Free Camera</button>
+        <label id="instruction">W/S: Move closer/farther&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A/D: Orbit left/right&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;R/F: Move up/down</label>
     </p>
     <p>
         Island Size: 
