Cleanup and Expl Lighting

--- a/final_project.html
+++ b/final_project.html
@@ -15,7 +15,7 @@
     <script src="lib/simulation.js"></script>
 
     <!-- Select a JavaScript file -->
-    <script src="project3.js"></script>
+    <script src="final_project.js"></script>
 
     <!-- Setup the Canvas -->
     <canvas id="canvas" width="1200" height="750">
